--- a/star-wars-rebellion/README.tex
+++ b/star-wars-rebellion/README.tex
@@ -1,4 +1,4 @@
-% Created 2021-04-20 Tue 13:36
+% Created 2021-04-21 Wed 14:18
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -31,27 +31,29 @@
 
 
 \section{Star Wars Rebellion}
-\label{sec:org12d429a}
+\label{sec:orge35a6f3}
 
 \subsection{Fase de Atribuição}
-\label{sec:orgcca3c0c}
+\label{sec:org9fb58df}
 
-Atribuir líderes à missões.
+Atribuir líderes às missões.
 
 \begin{center}
 \includegraphics[width=2.0in]{./lider.png}
 \end{center}
 
-O jogador Rebelde começa atribuindo seus líderes a missões. Quando terminar, o jogador Imperial atribui seus líderes a missões.
+O jogador Rebelde começa atribuindo seus líderes. Quando terminar, o jogador Imperial atribui seus líderes às missões.
 
 Cada missão possui um requisito de habilidade no canto superior esquerdo.
+
+Até dois líderes podem ser atriuídos por missão.
 
 \begin{center}
 \includegraphics[width=2.0in]{./skills.png}
 \end{center}
 
 \subsection{Fase de Comando}
-\label{sec:orgb0a1e2b}
+\label{sec:org013b58c}
 
 \begin{itemize}
 \item \textbf{Ativar um Sistema}:
@@ -60,6 +62,8 @@ Cada missão possui um requisito de habilidade no canto superior esquerdo.
 Use um líder de sua reserva de líderes para mover unidades no tabuleiro e possivelmente iniciar um combate.
 
 Unidades terrestres e TIE fighters precisam ser transportados (verifique a capacidade da nave de transporte).
+
+Se um líder não possuir nenhum \textbf{VALOR TÁTICO} este não pode ativar um sistema!
 
 \begin{itemize}
 \item \textbf{Revelar uma Missão}:
@@ -84,7 +88,7 @@ Os jogadores rolam dados (de qualquer cor) igual a soma dos ícones de habilidad
 Os dados são rolados somente para ícones correspondentes ao requisito de habilidade da missão.
 
 \subsection{Fase de Restauração}
-\label{sec:orgf2d30bf}
+\label{sec:orge5f895f}
 
 \begin{itemize}
 \item \textbf{Retornar líderes}:
@@ -133,7 +137,7 @@ O jogador posiciona essas unidades em sistemas onde possui marcadores de lealdad
 Cada jogador pode destacar no máximo duas unidades em cada sistema.
 
 \subsection{Vencendo o jogo}
-\label{sec:org797c10e}
+\label{sec:org0f7d1ad}
 
 O jogador Imperial vence se encontrar e destruir a base rebelde. Se o jogador Imperial possuir lealdade ou unidades terrestres no mesmo sistema da base Rebelde, a base Rebelde é revelada imediatamente.
 
