[FIX] Image size for Revellion pdf

--- a/star-wars-rebellion/README.tex
+++ b/star-wars-rebellion/README.tex
@@ -1,4 +1,4 @@
-% Created 2021-04-21 Wed 14:18
+% Created 2021-04-21 Wed 14:25
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -31,15 +31,15 @@
 
 
 \section{Star Wars Rebellion}
-\label{sec:orge35a6f3}
+\label{sec:org00c70a9}
 
 \subsection{Fase de Atribuição}
-\label{sec:org9fb58df}
+\label{sec:org5c2ad61}
 
 Atribuir líderes às missões.
 
 \begin{center}
-\includegraphics[width=2.0in]{./lider.png}
+\includegraphics[width=1.8in]{./lider.png}
 \end{center}
 
 O jogador Rebelde começa atribuindo seus líderes. Quando terminar, o jogador Imperial atribui seus líderes às missões.
@@ -53,7 +53,7 @@ Até dois líderes podem ser atriuídos por missão.
 \end{center}
 
 \subsection{Fase de Comando}
-\label{sec:org013b58c}
+\label{sec:org27324b9}
 
 \begin{itemize}
 \item \textbf{Ativar um Sistema}:
@@ -88,7 +88,7 @@ Os jogadores rolam dados (de qualquer cor) igual a soma dos ícones de habilidad
 Os dados são rolados somente para ícones correspondentes ao requisito de habilidade da missão.
 
 \subsection{Fase de Restauração}
-\label{sec:orge5f895f}
+\label{sec:org5829e97}
 
 \begin{itemize}
 \item \textbf{Retornar líderes}:
@@ -137,7 +137,7 @@ O jogador posiciona essas unidades em sistemas onde possui marcadores de lealdad
 Cada jogador pode destacar no máximo duas unidades em cada sistema.
 
 \subsection{Vencendo o jogo}
-\label{sec:org0f7d1ad}
+\label{sec:org37a2b67}
 
 O jogador Imperial vence se encontrar e destruir a base rebelde. Se o jogador Imperial possuir lealdade ou unidades terrestres no mesmo sistema da base Rebelde, a base Rebelde é revelada imediatamente.
 
